crates/lt-tui/src/snapshots/lt_tui__render_tests__detail_overlay.snap
---
source: src/tui/mod.rs
expression: "draw(&mut app, 100, 24)"
---
"user:Ada Lovelace  org:Acme  sort:updated-                                                          "
"                                                                                                    "
"IDENTIFIER  TITLE        STATE        PR│ALT-1 - Drive Centralized eyeballs                         "
"ALT-1       Drive Centr  Todo         No│[Todo]  Normal  Eli Von  Alternative Dispute Resolution    "
"COM-1       Scale Perse  Backlog      No│Labels: cum                                                "
"MUS-1       Extend Robu  Backlog      No│                                                           "
"MUS-2       Transform C  Backlog      Ur│Description                                                "
"ALT-2       Enhance Tot  In Review    Lo│                                                           "
"COM-2       Enhance Man  Done         Hi│Drive Centralized eyeballs                                 "
"PRI-1       Implement F  Todo         Ur│                                                           "
"PRI-2       Repurpose C  In Review    Ur│provident ut pariatur repellat veniam eos quae fugit.      "
"MUS-3       Seize Multi  Backlog      Hi│delectus quia ab et nihil et praesentium consectetur       "
"MUS-4       Grow Face t  In Review    No│molestiae.                                                 "
"ALT-3       Optimize Pe  In Progress  Ur│tempora qui natus nobis sequi quisquam quo laudantium sed. "
"MUS-5       Productize   Canceled     Lo│                                                           "
"                                        │- quas aut quidem placeat.                                 "
"                                        │- nisi debitis autem accusamus minus.                      "
"                                        │- molestiae maiores neque numquam.                         "
"                                        │                                                           "
"                                        │                                                           "
"                                        │                                                           "
"                                        │                                                           "
"                                                                                                    "
"j/k scroll  c comment  o b open in browser  Esc/q close                                             "
