crates/lt-tui/src/snapshots/lt_tui__render_tests__empty_list.snap
---
source: crates/lt-tui/src/render_tests.rs
assertion_line: 270
expression: "draw(&mut app, 80, 10)"
---
"user:Ada Lovelace  org:Acme  sort:updated-                                      "
"                                                                                "
"No issues found.                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"q quit  / filter  ? help  j/k nav  <space> detail  n new         not synced  [1]"
