crates/lt-tui/src/snapshots/lt_tui__render_tests__help_popup.snap
---
source: crates/lt-tui/src/render_tests.rs
assertion_line: 314
expression: "draw(&mut app, 100, 24)"
---
"user:Ada Lovelace  org:Acme  sort:updated-                                                          "
"                                                                                                    "
"IDENTIFIER  TITLE   ╭ Help  (type to search, Esc/q to close) ──────────────────╮          UPDATED - "
"ALT-1       Drive Ce│/                                                         │Dispute   2026-06-07"
"COM-1       Scale Pe│ q            quit                                        │es        2026-02-11"
"MUS-1       Extend R│ <esc>        clear search filter / reset list            │          2026-05-01"
"MUS-2       Transfor│ j / <down>   move down                                   │          2026-05-24"
"ALT-2       Enhance │ k / <up>     move up                                     │Dispute   2026-04-18"
"COM-2       Enhance │ g            go to top                                   │es        2026-06-04"
"PRI-1       Implemen│ G            go to bottom                                │          2026-05-30"
"PRI-2       Repurpos│ ctrl+d       half page down                              │          2026-06-13"
"MUS-3       Seize Mu│ ctrl+u       half page up                                │          2026-03-01"
"MUS-4       Grow Fac│ <page down>  page down                                   │          2026-05-29"
"ALT-3       Optimize│ <page up>    page up                                     │Dispute   2026-06-25"
"MUS-5       Producti│ <space>      open detail pane                            │          2026-05-20"
"                    │ /            filter by title                             │                    "
"                    │ ?            open this help popup                        │                    "
"                    │ n            new issue                                   │                    "
"                    │ s            set state                                   │                    "
"                    │ p            set priority                                │                    "
"                    ╰──────────────────────────────────────────────────────────╯                    "
"                                                                                                    "
"                                                                                                    "
"q quit  / filter  ? help  j/k nav  <space> detail  n new                             not synced  [1]"
