crates/lt-tui/src/snapshots/lt_tui__render_tests__list_view_wide_terminal_grows_title_column.snap
---
source: crates/lt-tui/src/render_tests.rs
expression: "draw(&mut app, 160, 20)"
---
"user:Ada Lovelace  org:Acme  sort:updated-                                                                                                                      "
"                                                                                                                                                                "
"IDENTIFIER  TITLE                                   STATE        PRIORITY     ASSIGNEE               TEAM           UPDATED -                                   "
"FIN-3       Evolve Monitored synergies              Backlog      High         Alexzander Morissette  Fine Art       2026-06-18                                  "
"TOB-3       Monetize Mandatory applications         Done         Normal       Louie Zboncak          Tobacco        2026-06-13                                  "
"PUB-1       Incubate Phased markets                 Todo         High         Jodie Streich          Public Policy  2026-06-13                                  "
"FIN-4       Morph Synchronised web-readiness        Todo         High         Brendan Kris           Fine Art       2026-05-14                                  "
"TOB-4       Synergize Sharable markets              In Review    No priority  Haskell Hegmann        Tobacco        2026-04-20                                  "
"PUB-2       Leverage Synergized users               Canceled     Low          -                      Public Policy  2026-04-15                                  "
"PUB-3       Transform Customer-focused communities  Done         High         -                      Public Policy  2026-04-12                                  "
"TOB-1       Expedite Advanced initiatives           Canceled     No priority  Kari Stroman           Tobacco        2026-04-07                                  "
"TOB-2       Engineer Versatile supply-chains        In Progress  Urgent       Toni Metz              Tobacco        2026-03-16                                  "
"TOB-5       Drive Assimilated supply-chains         Canceled     Normal       Louie Zboncak          Tobacco        2026-03-15                                  "
"FIN-2       Transition Centralized supply-chains    Todo         Urgent       Louie Zboncak          Fine Art       2026-02-22                                  "
"FIN-1       Transform Devolved convergence          In Review    Urgent       -                      Fine Art       2026-01-30                                  "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"q quit  / search  ctrl+/ help  j/k nav  <space> detail  c new                                                                                    not synced  [1]"
