crates/lt-tui/src/snapshots/lt_tui__render_tests__new_issue_modal.snap
---
source: src/tui/mod.rs
expression: "draw(&mut app, 100, 30)"
---
"user:Ada Lovelace  org:Acme  sort:updated-                                                          "
"                                                                                                    "
"IDENTIFIER  TITLE        STATE        PRIORITY  ASSIGNEE            TEAM                  UPDATED - "
"ALT-1       Drive Centr  Todo         Normal    Eli Von             Alternative Dispute   2026-06-07"
"COM-1       Sca╭ New Issue  [Tab next]  [Shift-Tab prev]  [Alt-Enter submit]  [Esc c╮     2026-02-11"
"MUS-1       Ext│[Title]  Fix the renderer                                           │     2026-05-01"
"MUS-2       Tra│                                                                    │     2026-05-24"
"ALT-2       Enh│ Team   Engineering                                                 │te   2026-04-18"
"COM-2       Enh│                                                                    │     2026-06-04"
"PRI-1       Imp│                                                                    │     2026-05-30"
"PRI-2       Rep│                                                                    │     2026-06-13"
"MUS-3       Sei│ Priority   No priority                                             │     2026-03-01"
"MUS-4       Gro│                                                                    │     2026-05-29"
"ALT-3       Opt│                                                                    │te   2026-06-25"
"MUS-5       Pro│                                                                    │     2026-05-20"
"               │ State   Todo                                                       │               "
"               │                                                                    │               "
"               │                                                                    │               "
"               │ Assignee   Ada Lovelace                                            │               "
"               │                                                                    │               "
"               │                                                                    │               "
"               │                                                                    │               "
"               │ Description                                                        │               "
"               │Some description.                                                   │               "
"               │                                                                    │               "
"               ╰────────────────────────────────────────────────────────────────────╯               "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"q quit  / filter  ? help  j/k nav  <space> detail  n new                                         [1]"
