crates/lt-tui/src/snapshots/lt_tui__render_tests__priority_popup.snap
---
source: crates/lt-tui/src/render_tests.rs
expression: "draw(&mut app, 100, 20)"
---
"user:Ada Lovelace  org:Acme  sort:updated-                                                          "
"                                                                                                    "
"IDENTIFIER  TITLE         STATE        PRIORITY     ASSIGNEE               TEAM           UPDATED - "
"FIN-3       Evolve Monit  Backlog      High         Alexzander Morissette  Fine Art       2026-06-18"
"TOB-3       Monetize Man  Done         Normal       Louie Zboncak╭ Set Priority ╮o        2026-06-13"
"PUB-1       Incubate Pha  Todo         High         Jodie Streich│ No priority  │ Policy  2026-06-13"
"FIN-4       Morph Synchr  Todo         High         Brendan Kris │ Urgent       │rt       2026-05-14"
"TOB-4       Synergize Sh  In Review    No priority  Haskell Hegma│ High         │o        2026-04-20"
"PUB-2       Leverage Syn  Canceled     Low          -            │ Normal       │ Policy  2026-04-15"
"PUB-3       Transform Cu  Done         High         -            │ Low          │ Policy  2026-04-12"
"TOB-1       Expedite Adv  Canceled     No priority  Kari Stroman ╰──────────────╯o        2026-04-07"
"TOB-2       Engineer Ver  In Progress  Urgent       Toni Metz              Tobacco        2026-03-16"
"TOB-5       Drive Assimi  Canceled     Normal       Louie Zboncak          Tobacco        2026-03-15"
"FIN-2       Transition C  Todo         Urgent       Louie Zboncak          Fine Art       2026-02-22"
"FIN-1       Transform De  In Review    Urgent       -                      Fine Art       2026-01-30"
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"q quit  / search  ctrl+/ help  j/k nav  <space> detail  c new                        not synced  [1]"
