crates/lt-tui/src/snapshots/lt_tui__render_tests__search_overlay.snap
---
source: crates/lt-tui/src/render_tests.rs
assertion_line: 307
expression: "draw(&mut app, 100, 20)"
---
"user:Ada Lovelace  org:Acme  sort:updated-                                                          "
"                                                                                                    "
"IDENTIFIER  TITLE        STATE        PRIORITY  ASSIGNEE            TEAM                  UPDATED - "
"ALT-1       Drive Centr  Todo         Normal    Eli Von             Alternative Dispute   2026-06-07"
"COM-1       Scale Perse  Backlog      Normal    -                   Computer Games        2026-02-11"
"MUS-1       Extend Robu  Backlog      Normal    -                   Music                 2026-05-01"
"MUS-2       Transform C  Backlog      Urgent    -                   Music                 2026-05-24"
"ALT-2       Enhance Tot  In Review    Low       Cathy Wilderman     Alternative Dispute   2026-04-18"
"COM-2       Enhance Man  Done         High      Monique Wintheiser  Computer Games        2026-06-04"
"PRI-1       Implement F  Todo         Urgent    Emie Parker         Printing              2026-05-30"
"PRI-2       Repurpose C  In Review    Urgent    Samanta Lynch       Printing              2026-06-13"
"MUS-3       Seize Multi  Backlog      High      Percival Mante      Music                 2026-03-01"
"MUS-4       Grow Face t  In Review    Normal    Al Collins          Music                 2026-05-29"
"ALT-3       Optimize Pe  In Progress  Urgent    -                   Alternative Dispute   2026-06-25"
"MUS-5       Productize   Canceled     Low       Wilford Bins        Music                 2026-05-20"
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"q quit  / filter  ? help  j/k nav  <space> detail  n new                             not synced  [1]"
